tests/ui/parser/pat-ranges-3.stderr
error: expected a pattern range bound, found an expression
  --> $DIR/pat-ranges-3.rs:4:16
   |
LL |     let 10 ..= 10 + 3 = 12;
   |                ^^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>

error: expected a pattern range bound, found an expression
  --> $DIR/pat-ranges-3.rs:7:9
   |
LL |     let 10 - 3 ..= 10 = 8;
   |         ^^^^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch19-00-patterns.html>

error: aborting due to 2 previous errors

